# AI-Security-Assistant

./: AI安全助手.md  AI安全助手_Plan.md
aisec-demo/: .gitignore  README.md  Terminal.md  _ho.txt  _pi.txt  _susp2.txt  pyproject.toml  validate_all.py  validate_output.txt
aisec-demo/_evidence/: 07_AIG_registry.json  09_IAC_whitelist_files.json  10_IAC_blacklist_files.json  11_IAC_sandbox_head.py
aisec-demo/aisec/: __init__.py  __main__.py  cli.py
aisec-demo/aisec/agents/: __init__.py  gateway.py  probe.py  soc.py
aisec-demo/aisec/core/: __init__.py  a2a.py  agent.py  circuit_breaker.py  config.py  event_bus.py  registry.py  tools.py  trust.py
aisec-demo/aisec/llm/: __init__.py
aisec-demo/aisec/msp/: __init__.py  attack_corpus.py  fingerprint.py  harmful_output.py  jailbreak.py  prompt_injection.py  runner.py
aisec-demo/aisec/scanners/: __init__.py  alert_generator.py  hasher.py  list_archive.py  mcp_scanner.py  risk_scorer.py  sandbox.py  semantic_analyzer.py  skill_scanner.py  static_analyzer.py
aisec-demo/aisec/web/: __init__.py  app.py  dashboard.py
aisec-demo/aisec/web/static/: style.css
aisec-demo/aisec/web/templates/: agents.html  alerts.html  base.html  events.html  index.html  msp.html  msp_detail.html
aisec-demo/config/: default.yaml
aisec-demo/config/policies/: default_iac.json
aisec-demo/examples/: compliant_agent.py  demo_anomalous_egress.py  demo_langchain_agent.py  demo_mcp.json  demo_mcp_client.py  demo_msp_fingerprint.py  demo_msp_full_scan.py  demo_msp_harmful_output.py  demo_msp_prompt_injection.py  demo_rogue_agent.py  safe_skill.py  suspicious_skill.py
aisec-demo/tools/: syntax_check.py  test_gateway_intercept.py  test_register.py  test_scanners.py  test_soc_direct.py  test_subprocess.py  test_whitelist_agent.py
