[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aisec-demo"
version = "0.1.0"
description = "AI 安全助手 Demo - 多 Agent 架构的 LLM/Agent/MCP/Skills 安全运营平台"
readme = "README.md"
# Trae IDE 内置 Python 3.9，为最大化兼容性将下限设为 3.9
requires-python = ">=3.9"
authors = [{ name = "大模型工程师" }]
license = { text = "Proprietary" }

# Demo 阶段最小依赖；按需安装可选能力
dependencies = [
    # Web 框架（soc-agent）
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",

    # HTTP 客户端 / 异步工具
    "httpx>=0.27",
    "aiofiles>=23.2",
    "aiosqlite>=0.19",      # Registry 异步 SQLite 客户端
    "eval_type_backport>=0.4",   # Py 3.9 兼容 PEP 604 联合类型 (X | Y)

    # 配置
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",

    # 终端探针
    "psutil>=5.9",
    "watchdog>=4.0",

    # 沙箱
    "RestrictedPython>=6.0",

    # LLM（千问 OpenAI 兼容）
    "openai>=1.30",

    # 数据 / 工具
    "rich>=13.7",            # 终端美化
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.3",
]
gateway = [
    # mitmproxy 仅 gateway-agent 需要
    "mitmproxy>=10.0",
]
all = [
    "aisec-demo[gateway,dev]",
]

[project.scripts]
aisec = "aisec.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aisec*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
aisec = ["config/*.yaml", "config/policies/*.json", "templates/*.html", "static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
